impl about, help and home pages with title

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,10 +1,18 @@
-<h1>Help Page</h1>
-<p>Need help? Check out the FAQ below</p>
-<dl>
-  <dt>Can I download an Image</dt>
-  <dd>Bacon ipsum dolor amet venison prosciutto ground round frankfurter short ribs pig beef ribs landjaeger alcatra kielbasa capicola ham hock.</dd>
-  <dt>How can I download an image</dt>
-  <dd>Frankfurter ground round chicken corned beef sirloin venison brisket rump. Beef ribs meatloaf sausage biltong chuck pork belly shank. Chicken ham hock turducken ribeye.</dd>
-   <dt>What sort of files can I download</dt>
-  <dd>Capicola leberkas pork turducken tail chicken. Fatback turkey salami ground round sirloin biltong pork chop tail.</dd>
-</dl>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Help | Rails Twitter Clone</title>
+  </head>
+  <body>
+    <h1>Help Page</h1>
+    <p>Need help? Check out the FAQ below</p>
+    <dl>
+      <dt>Can I download an Image</dt>
+      <dd>Bacon ipsum dolor amet venison prosciutto ground round frankfurter short ribs pig beef ribs landjaeger alcatra kielbasa capicola ham hock.</dd>
+      <dt>How can I download an image</dt>
+      <dd>Frankfurter ground round chicken corned beef sirloin venison brisket rump. Beef ribs meatloaf sausage biltong chuck pork belly shank. Chicken ham hock turducken ribeye.</dd>
+       <dt>What sort of files can I download</dt>
+      <dd>Capicola leberkas pork turducken tail chicken. Fatback turkey salami ground round sirloin biltong pork chop tail.</dd>
+    </dl>
+  </body>
+</html>  
