--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Rails Twitter Clone</h1>
-<p>Home page for the Rails Twitter Clone</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | Rails Twitter Clone</title>
+  </head>
+  <body>
+    <h1>Rails Twitter Clone</h1>
+    <p>Home page for the Rails Twitter Clone</p>
+  </body>
+</html>
