provide page title via erb

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'Help') %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Help | Rails Twitter Clone</title>
+    <title><%= yield(:title) %> | Rails Twitter Clone</title>
   </head>
   <body>
     <h1>Help Page</h1>
