--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'Home')  %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home | Rails Twitter Clone</title>
+    <title><%= yield(:title) %> | Rails Twitter Clone</title>
   </head>
   <body>
     <h1>Rails Twitter Clone</h1>
