--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'About')  %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About | Rails Twitter Clone</title>
+    <title><%= yield(:title) %> | Rails Twitter Clone</title>
   </head>
   <body>
     <h1>About</h1>
